@@ -1,0 +1,4 @@
+letters = ['a', 'b', 'c']
+
+for index, letter in enumerate(letters):
+    print(letters[index])  # [unnecessary-list-index-lookup]
